--- a/photography.html
+++ b/photography.html
@@ -253,6 +253,13 @@
                   </li>
                   <li>
                     <a
+                      href="https://www.linkedin.com/in/chen-huang-820x/"
+                      class="icon brands fa-linkedin-in"
+                      ><span class="label">Linkedin</span></a
+                    >
+                  </li>
+                  <li>
+                    <a
                       href="https://www.zhihu.com/people/huang-chen-54-4"
                       class="icon brands fa-zhihu"
                       ><span class="label">Zhihu</span></a
@@ -260,9 +267,9 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.linkedin.com/in/chen-huang-820x/"
-                      class="icon brands fa-linkedin-in"
-                      ><span class="label">Linkedin</span></a
+                      href="/docs/CV_ChenHuang.pdf"
+                      class="icon fa-solid fa-file"
+                      ><span class="label">CV</span></a
                     >
                   </li>
                 </ul>
