--- a/index.html
+++ b/index.html
@@ -175,6 +175,23 @@
           width: 12px;
           height: 12px;
         }
+
+        .pronunciation-btn {
+          transform: scale(0.9); /* 整体缩小到90% */
+          transform-origin: left center; /* 保持左对齐不变形 */
+          font-size: 12px; /* 调整字体大小 */
+          padding: 6px 10px; /* 调整内边距 */
+        }
+
+        .speaker-icon {
+          width: 16px; /* 缩小图标尺寸 */
+          height: 16px; /* 缩小图标尺寸 */
+        }
+
+        /* 如果布局需要更紧凑，可以调整间距 */
+        .pronunciation-btn {
+          gap: 4px;
+        }
       }
     </style>
   </head>
