--- a/notes.html
+++ b/notes.html
@@ -909,9 +909,11 @@
 
   /* 调整课程卡片中的标签样式 */
   .course-meta .pill {
-    background: #ef8376;
-    color: white;
-    border: 1px solid #ddd;
+    background: #f0f0f0;
+    border-radius: 15px;
+    padding: 2px 8px;
+    font-size: 0.8em;
+    margin-left: 8px;
   }
 </style>
 
