--- a/notes.html
+++ b/notes.html
@@ -909,7 +909,8 @@
 
   /* 调整课程卡片中的标签样式 */
   .course-meta .pill {
-    background: #f0f0f0;
+    background: #ef8376;
+    color: white;
     border-radius: 15px;
     padding: 3px 8px;
     font-size: 0.8em;
