--- a/notes.html
+++ b/notes.html
@@ -143,6 +143,7 @@
                       <div class="course-meta">
                         <span class="pill" data-type="Graduate">Graduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -166,6 +167,7 @@
                       <div class="course-meta">
                         <span class="pill" data-type="Graduate">Graduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -186,6 +188,7 @@
                       <div class="course-meta">
                         <span class="pill" data-type="Graduate">Graduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Math</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -212,6 +215,7 @@
                       <div class="course-meta">
                         <span class="pill" data-type="Graduate">Graduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -233,6 +237,7 @@
                       <div class="course-meta">
                         <span class="pill" data-type="Graduate">Graduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -254,6 +259,7 @@
                       <div class="course-meta">
                         <span class="pill" data-type="Graduate">Graduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -301,6 +307,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Math</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -339,6 +346,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -366,6 +374,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -390,6 +399,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -439,6 +449,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Engineering</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -480,6 +491,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -516,6 +528,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -537,6 +550,7 @@
                       <div class="course-meta">
                         <span class="pill" data-type="Graduate">Graduate</span>
                         <span class="pill">Elective</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -558,6 +572,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Elective</span>
+                        <span class="pill">Engineering</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -605,6 +620,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -635,6 +651,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Core</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -656,6 +673,7 @@
                       <div class="course-meta">
                         <span class="pill" data-type="Graduate">Graduate</span>
                         <span class="pill">Elective</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -684,6 +702,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Elective</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -710,6 +729,7 @@
                       <h4>Quantum Mechanics II (Summer 2020)</h4>
                       <div class="course-meta">
                         <span class="pill" data-type="Graduate">Graduate</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -779,7 +799,8 @@
                     <div class="course-header">
                       <h4>Physics GRE (Fall 2021)</h4>
                       <div class="course-meta">
-                        <span class="pill">Self-Study</span>
+                        <span class="pill">GRE</span>
+                        <span class="pill">Physics</span>
                       </div>
                     </div>
                     <div class="course-body">
