--- a/notes.html
+++ b/notes.html
@@ -935,6 +935,7 @@
     border-radius: 15px;
     padding: 4px 8px;
     font-size: 0.8em;
+    font-family: sans-serif;
     margin-left: 8px;
   }
 
