--- a/notes.html
+++ b/notes.html
@@ -941,43 +941,43 @@
 
   /* 按类型定义颜色 */
   .pill[data-type="Graduate"] {
-    background: #ef8376; /* 研究生红 */
-    color: white;
+    background: #e8a89c; /* 柔和的珊瑚红 */
+    color: #333;
   }
 
   .pill[data-type="Undergraduate"] {
-    background: #6c5ce7; /* 本科紫 */
-    color: white;
+    background: #9b9bcf; /* 灰调薰衣草紫 */
+    color: #333;
   }
 
   .pill[data-type="Core"] {
-    background: #00b894; /* 核心课程绿 */
-    color: white;
+    background: #88c7b4; /* 薄荷绿 */
+    color: #333;
   }
 
   .pill[data-type="Elective"] {
-    background: #fdcb6e; /* 选修课黄 */
-    color: #2d3436;
+    background: #f5e3c3; /* 米白色 */
+    color: #333;
   }
 
   .pill[data-type="Physics"] {
-    background: #0984e3; /* 物理蓝 */
-    color: white;
+    background: #9fbdd8; /* 灰调天蓝 */
+    color: #333;
   }
 
   .pill[data-type="Math"] {
-    background: #f44a88; /* 数学粉 */
-    color: white;
+    background: #e8b5c4; /* 玫瑰粉 */
+    color: #333;
   }
 
   .pill[data-type="Engineering"] {
-    background: #3b861a; /* 工程绿 */
-    color: white;
+    background: #a8c29d; /* 橄榄绿 */
+    color: #333;
   }
 
   .pill[data-type="GRE"] {
-    background: #835204; /* GRE棕 */
-    color: white;
+    background: #c4b19d; /* 浅卡其色 */
+    color: #333;
   }
 </style>
 
