--- a/notes.html
+++ b/notes.html
@@ -946,7 +946,7 @@
 
   .pill[data-type="Undergraduate"] {
     background: #9b9bcf; /* 灰调薰衣草紫 */
-    color: #333;
+    color: white;
   }
 
   .pill[data-type="Core"] {
@@ -971,7 +971,7 @@
 
   .pill[data-type="Engineering"] {
     background: #a8c29d; /* 橄榄绿 */
-    color: #333;
+    color: white;
   }
 
   .pill[data-type="GRE"] {
