--- a/notes.html
+++ b/notes.html
@@ -941,7 +941,7 @@
   /* 按类型定义颜色 */
   .pill[data-type="Graduate"] {
     background: #e8a89c; /* 柔和的珊瑚红 */
-    color: #333;
+    color: white;
   }
 
   .pill[data-type="Undergraduate"] {
@@ -950,7 +950,7 @@
   }
 
   .pill[data-type="Core"] {
-    background: #88c7b4; /* 薄荷绿 */
+    background: #9ee3ce; /* 薄荷绿 */
     color: #333;
   }
 
@@ -961,7 +961,7 @@
 
   .pill[data-type="Physics"] {
     background: #9fbdd8; /* 灰调天蓝 */
-    color: #333;
+    color: white;
   }
 
   .pill[data-type="Math"] {
