--- a/notes.html
+++ b/notes.html
@@ -951,12 +951,12 @@
 
   .pill[data-type="Core"] {
     background: #9ee3ce; /* 薄荷绿 */
-    color: #333;
+    color: white;
   }
 
   .pill[data-type="Elective"] {
     background: #f5e3c3; /* 米白色 */
-    color: #333;
+    color: white;
   }
 
   .pill[data-type="Physics"] {
@@ -966,7 +966,7 @@
 
   .pill[data-type="Math"] {
     background: #e8b5c4; /* 玫瑰粉 */
-    color: #333;
+    color: white;
   }
 
   .pill[data-type="Engineering"] {
@@ -976,7 +976,7 @@
 
   .pill[data-type="GRE"] {
     background: #c4b19d; /* 浅卡其色 */
-    color: #333;
+    color: white;
   }
 </style>
 
