--- a/notes.html
+++ b/notes.html
@@ -955,7 +955,7 @@
   }
 
   .pill[data-type="Elective"] {
-    background: #f5e3c3; /* 米白色 */
+    background: #fdd795; /* 米白色 */
     color: white;
   }
 
