--- a/notes.html
+++ b/notes.html
@@ -928,6 +928,55 @@
     border-color: #ef8376;
   }
 
+  /* 按类型定义激活状态颜色 */
+  .tag-pill.active[data-type="Graduate"] {
+    background: #d6958a !important; /* 加深珊瑚红 */
+    border-color: #c48377 !important;
+    color: white !important;
+  }
+
+  .tag-pill.active[data-type="Undergraduate"] {
+    background: #8585ba !important; /* 加深薰衣草紫 */
+    border-color: #7474a6 !important;
+    color: white !important;
+  }
+
+  .tag-pill.active[data-type="Core"] {
+    background: #72aa9a !important; /* 加深薄荷绿 */
+    border-color: #629184 !important;
+    color: white !important;
+  }
+
+  .tag-pill.active[data-type="Elective"] {
+    background: #fdd795 !important; /* 加深米白 */
+    border-color: #cca970 !important;
+    color: #554d44 !important;
+  }
+
+  .tag-pill.active[data-type="Physics"] {
+    background: #8aa9c2 !important; /* 加深天蓝 */
+    border-color: #7998b1 !important;
+    color: white !important;
+  }
+
+  .tag-pill.active[data-type="Math"] {
+    background: #d29fb0 !important; /* 加深玫瑰粉 */
+    border-color: #c18e9f !important;
+    color: white !important;
+  }
+
+  .tag-pill.active[data-type="Engineering"] {
+    background: #92ac89 !important; /* 加深橄榄绿 */
+    border-color: #829b79 !important;
+    color: white !important;
+  }
+
+  .tag-pill.active[data-type="GRE"] {
+    background: #b09f8d !important; /* 加深卡其色 */
+    border-color: #a08e7d !important;
+    color: white !important;
+  }
+
   /* 调整课程卡片中的标签样式 */
   .course-meta .pill {
     background: #ef8376;
