--- a/notes.html
+++ b/notes.html
@@ -950,7 +950,7 @@
   .tag-pill.active[data-type="Elective"] {
     background: #fdd795 !important; /* 加深米白 */
     border-color: #cca970 !important;
-    color: #554d44 !important;
+    color: white !important;
   }
 
   .tag-pill.active[data-type="Physics"] {
