--- a/notes.html
+++ b/notes.html
@@ -1004,12 +1004,12 @@
   }
 
   .pill[data-type="Elective"] {
-    background: #fdd795; /* 米白色 */
+    background: rgba(246, 224, 147); /* 米白色 */
     color: white;
   }
 
   .pill[data-type="Physics"] {
-    background: #9fbdd8; /* 灰调天蓝 */
+    background: rgba(120, 183, 201, 1); /* 灰调天蓝 */
     color: white;
   }
 
@@ -1019,7 +1019,7 @@
   }
 
   .pill[data-type="Engineering"] {
-    background: #a8c29d; /* 橄榄绿 */
+    background: rgba(151, 179, 25, 1); /* 橄榄绿 */
     color: white;
   }
 
