--- a/notes.html
+++ b/notes.html
@@ -989,7 +989,7 @@
 
   /* 按类型定义颜色 */
   .pill[data-type="Graduate"] {
-    background: #e8a89c; /* 柔和的珊瑚红 */
+    background: rgba(229, 139, 123, 1); /* 柔和的珊瑚红 */
     color: white;
   }
 
