--- a/notes.html
+++ b/notes.html
@@ -999,7 +999,7 @@
   }
 
   .pill[data-type="Core"] {
-    background: #9ee3ce; /* 薄荷绿 */
+    background: #63ebe9; /* 薄荷绿 */
     color: white;
   }
 
@@ -1014,7 +1014,7 @@
   }
 
   .pill[data-type="Math"] {
-    background: #e8b5c4; /* 玫瑰粉 */
+    background: rgba(215, 144, 193, 1); /* 玫瑰粉 */
     color: white;
   }
 
