--- a/notes.html
+++ b/notes.html
@@ -141,7 +141,7 @@
                     <div class="course-header">
                       <h4>Quantum Information (Fall 2023)</h4>
                       <div class="course-meta">
-                        <span class="pill" data-type="Graduate">Graduate</span>
+                        <span class="pill">Graduate</span>
                         <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
@@ -165,7 +165,7 @@
                     <div class="course-header">
                       <h4>Quantum Optics (Fall 2023)</h4>
                       <div class="course-meta">
-                        <span class="pill" data-type="Graduate">Graduate</span>
+                        <span class="pill">Graduate</span>
                         <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
@@ -186,7 +186,7 @@
                     <div class="course-header">
                       <h4>Mathematical Methods for Physicists (Fall 2023)</h4>
                       <div class="course-meta">
-                        <span class="pill" data-type="Graduate">Graduate</span>
+                        <span class="pill">Graduate</span>
                         <span class="pill">Core</span>
                         <span class="pill">Math</span>
                       </div>
@@ -213,7 +213,7 @@
                     <div class="course-header">
                       <h4>Advanced Classical Mechanics (Fall 2023)</h4>
                       <div class="course-meta">
-                        <span class="pill" data-type="Graduate">Graduate</span>
+                        <span class="pill">Graduate</span>
                         <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
@@ -235,7 +235,7 @@
                     <div class="course-header">
                       <h4>Quantum Theory of Matter (Spring 2024)</h4>
                       <div class="course-meta">
-                        <span class="pill" data-type="Graduate">Graduate</span>
+                        <span class="pill">Graduate</span>
                         <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
@@ -257,7 +257,7 @@
                     <div class="course-header">
                       <h4>Laser Technology (Spring 2024)</h4>
                       <div class="course-meta">
-                        <span class="pill" data-type="Graduate">Graduate</span>
+                        <span class="pill">Graduate</span>
                         <span class="pill">Core</span>
                         <span class="pill">Physics</span>
                       </div>
@@ -548,7 +548,7 @@
                     <div class="course-header">
                       <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
                       <div class="course-meta">
-                        <span class="pill" data-type="Graduate">Graduate</span>
+                        <span class="pill">Graduate</span>
                         <span class="pill">Elective</span>
                         <span class="pill">Physics</span>
                       </div>
@@ -671,7 +671,7 @@
                     <div class="course-header">
                       <h4>Quantum Optics (Fall 2021)</h4>
                       <div class="course-meta">
-                        <span class="pill" data-type="Graduate">Graduate</span>
+                        <span class="pill">Graduate</span>
                         <span class="pill">Elective</span>
                         <span class="pill">Physics</span>
                       </div>
@@ -728,7 +728,7 @@
                     <div class="course-header">
                       <h4>Quantum Mechanics II (Summer 2020)</h4>
                       <div class="course-meta">
-                        <span class="pill" data-type="Graduate">Graduate</span>
+                        <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
                       </div>
                     </div>
