--- a/notes.html
+++ b/notes.html
@@ -999,12 +999,12 @@
   }
 
   .pill[data-type="Core"] {
-    background: #63ebe9; /* 薄荷绿 */
+    background: #48aaa8; /* 薄荷绿 */
     color: white;
   }
 
   .pill[data-type="Elective"] {
-    background: rgba(246, 224, 147); /* 米白色 */
+    background: rgba(232, 197, 107); /* 米白色 */
     color: white;
   }
 
