--- a/notes.html
+++ b/notes.html
@@ -999,7 +999,7 @@
   }
 
   .pill[data-type="Core"] {
-    background: #48aaa8; /* 薄荷绿 */
+    background: rgba(168, 218, 219, 1); /* 薄荷绿 */
     color: white;
   }
 
