--- a/notes.html
+++ b/notes.html
@@ -979,7 +979,7 @@
 
   /* 调整课程卡片中的标签样式 */
   .course-meta .pill {
-    background: #ef8376;
+    background: rgb(229, 226, 226);
     color: white;
     border-radius: 15px;
     padding: 4px 8px;
@@ -990,42 +990,27 @@
   /* 按类型定义颜色 */
   .pill[data-type="Graduate"] {
     background: rgba(229, 139, 123, 1); /* 柔和的珊瑚红 */
-    color: white;
   }
-
   .pill[data-type="Undergraduate"] {
     background: #9b9bcf; /* 灰调薰衣草紫 */
-    color: white;
   }
-
   .pill[data-type="Core"] {
     background: rgba(168, 218, 219, 1); /* 薄荷绿 */
-    color: white;
   }
-
   .pill[data-type="Elective"] {
     background: rgba(232, 197, 107); /* 米白色 */
-    color: white;
   }
-
   .pill[data-type="Physics"] {
     background: rgba(120, 183, 201, 1); /* 灰调天蓝 */
-    color: white;
   }
-
   .pill[data-type="Math"] {
     background: rgba(215, 144, 193, 1); /* 玫瑰粉 */
-    color: white;
   }
-
   .pill[data-type="Engineering"] {
     background: rgba(151, 179, 25, 1); /* 橄榄绿 */
-    color: white;
   }
-
   .pill[data-type="GRE"] {
     background: #c4b19d; /* 浅卡其色 */
-    color: white;
   }
 </style>
 
