--- a/notes.html
+++ b/notes.html
@@ -992,24 +992,30 @@
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
-    // 类型映射表
-    const typeMap = {
-      Graduate: "Graduate",
-      Undergraduate: "Undergraduate",
-      Core: "Core",
-      Elective: "Elective",
-      GRE: "GRE",
-      Physics: "Physics",
-      Math: "Math",
-      Engineering: "Engineering",
-    };
+    // 为每个标签添加类型属性
+    document.querySelectorAll(".pill").forEach((pill) => {
+      const text = pill.textContent.trim();
+      const typeMap = {
+        Graduate: "Graduate",
+        Undergraduate: "Undergraduate",
+        Core: "Core",
+        Elective: "Elective",
+        GRE: "GRE",
+        Physics: "Physics",
+        Math: "Math",
+        Engineering: "Engineering",
+      };
 
+      pill.dataset.type = typeMap[text] || "Other";
+    });
+  });
+
+  // 标签收集与筛选功能
+  document.addEventListener("DOMContentLoaded", () => {
     // 收集所有标签
     const allTags = new Set();
     document.querySelectorAll(".pill").forEach((pill) => {
-      const text = pill.textContent.trim();
-      pill.dataset.type = typeMap[text] || "Other";
-      allTags.add(text);
+      allTags.add(pill.textContent.trim());
     });
 
     // 生成标签云
@@ -1018,89 +1024,82 @@
       const pill = document.createElement("div");
       pill.className = "tag-pill";
       pill.textContent = tag;
-      pill.dataset.type = typeMap[tag] || "Other";
-
-      // 初始化样式
-      const bgColor = getComputedStyle(pill).backgroundColor;
-      const luminance = (rgb) =>
-        (0.2126 * rgb[0] + 0.7152 * rgb[1] + 0.0722 * rgb[2]) / 255;
-
-      const rgb = bgColor.match(/\d+/g).map(Number);
-      pill.style.color = luminance(rgb) > 0.6 ? "#333" : "#fff";
-      pill.style.borderColor =
-        luminance(rgb) > 0.6 ? "rgba(0,0,0,0.1)" : "rgba(255,255,255,0.2)";
-
-      pill.addEventListener("click", toggleTagFilter);
+      pill.addEventListener("click", () => toggleTagFilter(tag));
       tagContainer.appendChild(pill);
     });
 
     // 标签筛选功能
     let activeTags = new Set();
 
-    function toggleTagFilter(event) {
+    function toggleTagFilter(tag) {
       const pill = event.target;
-      const tag = pill.textContent.trim();
-
       pill.classList.toggle("active");
-      activeTags[pill.classList.contains("active") ? "add" : "delete"](tag);
 
-      // 更新样式
-      if (pill.classList.contains("active")) {
-        pill.style.borderColor = pill.style.backgroundColor;
-        pill.style.color = "white";
+      if (activeTags.has(tag)) {
+        activeTags.delete(tag);
       } else {
-        const bgColor = getComputedStyle(pill).backgroundColor;
-        const rgb = bgColor.match(/\d+/g).map(Number);
-        const luminance =
-          (0.2126 * rgb[0] + 0.7152 * rgb[1] + 0.0722 * rgb[2]) / 255;
-        pill.style.color = luminance > 0.6 ? "#333" : "#fff";
-        pill.style.borderColor =
-          luminance > 0.6 ? "rgba(0,0,0,0.1)" : "rgba(255,255,255,0.2)";
+        activeTags.add(tag);
       }
 
       filterCourses();
     }
 
     function filterCourses() {
-      document.querySelectorAll(".course-card").forEach((course) => {
+      const courses = document.querySelectorAll(".course-card");
+
+      courses.forEach((course) => {
         const courseTags = new Set(
-          [...course.querySelectorAll(".pill")].map((p) => p.textContent.trim())
+          Array.from(course.querySelectorAll(".pill")).map((p) =>
+            p.textContent.trim()
+          )
         );
-        course.style.display = [...activeTags].every((t) => courseTags.has(t))
-          ? "block"
-          : "none";
+
+        const shouldShow = Array.from(activeTags).every((tag) =>
+          courseTags.has(tag)
+        );
+        course.style.display = shouldShow ? "block" : "none";
       });
+
+      // 同步更新搜索状态显示
       updateSearchStatus();
     }
 
-    // 搜索功能整合
-    const searchInput = document.getElementById("noteSearch");
-    searchInput.addEventListener("input", () => {
-      filterCourses();
-      updateSearchStatus();
-    });
+    // 与现有搜索功能的整合
+    const originalSearch = document.getElementById("noteSearch");
 
     function updateSearchStatus() {
       const status = document.getElementById("searchStatus");
-      const filters = [...activeTags, searchInput.value.trim()].filter(Boolean);
+      const activeFilters = [
+        ...Array.from(activeTags),
+        originalSearch.value.trim(),
+      ].filter(Boolean);
 
-      status.textContent = filters.length
-        ? `Showing results for: ${filters.join(", ")}`
+      status.textContent = activeFilters.length
+        ? `Showing results for: ${activeFilters.join(", ")}`
         : "";
     }
 
-    // 滚动功能
-    document.querySelectorAll(".scrolly").forEach((anchor) => {
-      anchor.addEventListener("click", function (e) {
-        e.preventDefault();
-        const target = document.querySelector(this.getAttribute("href"));
-        target.scrollIntoView({ behavior: "smooth" });
+    // 监听原有搜索输入
+    originalSearch.addEventListener("input", () => {
+      filterCourses();
+      updateSearchStatus();
+    });
+  });
 
-        document.querySelectorAll(".school-nav h4 a").forEach((link) => {
-          link.classList.remove("active");
-        });
-        this.classList.add("active");
+  // 调整原有滚动功能
+  document.querySelectorAll(".scrolly").forEach((anchor) => {
+    anchor.addEventListener("click", function (e) {
+      e.preventDefault();
+      const target = document.querySelector(this.getAttribute("href"));
+      target.scrollIntoView({ behavior: "smooth" });
+
+      // 移除所有学校导航的active状态
+      document.querySelectorAll(".school-nav h4 a").forEach((link) => {
+        link.classList.remove("active");
       });
+
+      // 为当前点击的学校添加active状态
+      this.classList.add("active");
     });
   });
 </script>
