--- a/notes.html
+++ b/notes.html
@@ -977,7 +977,7 @@
     background: rgba(232, 197, 107); /* 米白色 */
   }
   .pill[data-type="Physics"] {
-    background: rgba(120, 183, 201, 1); /* 灰调天蓝 */
+    background: rgb(115, 174, 225); /* 灰调天蓝 */
   }
   .pill[data-type="Math"] {
     background: rgba(215, 144, 193, 1); /* 玫瑰粉 */
