--- a/notes.html
+++ b/notes.html
@@ -971,7 +971,7 @@
     background: #9b9bcf; /* 灰调薰衣草紫 */
   }
   .pill[data-type="Core"] {
-    background: rgba(168, 218, 219, 1); /* 薄荷绿 */
+    background: rgb(101, 205, 206); /* 薄荷绿 */
   }
   .pill[data-type="Elective"] {
     background: rgba(232, 197, 107); /* 米白色 */
